force-app/main/default/objects/Sales_Order__c/fields/Billing_City__c.field-meta.xml
<CustomField>
    <fullName>Billing_City__c</fullName>
    <formula>Opportunity__r.Billing_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing City</label>
    <type>Text</type>
</CustomField>