force-app/main/default/objects/Sales_Order__c/fields/Billing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Billing_Postal_Code__c</fullName>
    <formula>Opportunity__r.Billing_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Billing Postal Code</label>
    <type>Text</type>
</CustomField>