force-app/main/default/objects/Sales_Order__c/fields/Courier__c.field-meta.xml
<CustomField>
    <fullName>Courier__c</fullName>
    <label>Courier</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>