force-app/main/default/objects/Sales_Order__c/fields/Created_From_SAP__c.field-meta.xml
<CustomField>
    <fullName>Created_From_SAP__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Created From SAP</label>
    <type>Checkbox</type>
</CustomField>