force-app/main/default/objects/Sales_Order__c/fields/Customer_PO_Ref_no__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_Ref_no__c</fullName>
    <inlineHelpText>Enter customer PO reference number &amp; upload PO copy in files</inlineHelpText>
    <label>Customer PO Ref no.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>