force-app/main/default/objects/Sales_Order__c/fields/Delivery_Block__c.field-meta.xml
<CustomField>
    <fullName>Delivery_Block__c</fullName>
    <inlineHelpText>wIll be auto updated from SAP</inlineHelpText>
    <label>Delivery Block</label>
    <length>25</length>
    <type>Text</type>
</CustomField>