force-app/main/default/objects/Sales_Order__c/fields/Distributer_Customer__c.field-meta.xml
<CustomField>
    <fullName>Distributer_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributer Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Order (Distributer Customer)</relationshipLabel>
    <relationshipName>Sales_Order1</relationshipName>
    <type>Lookup</type>
</CustomField>