force-app/main/default/objects/Sales_Order__c/fields/Expected_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Expected_Delivery_Date__c</fullName>
    <inlineHelpText>Sync from SAP, on capturing the expected delivery date in SAP</inlineHelpText>
    <label>Expected Delivery Date</label>
    <type>Date</type>
</CustomField>