force-app/main/default/objects/Sales_Order__c/fields/Initiated_By__c.field-meta.xml
<CustomField>
    <fullName>Initiated_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Initiated By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Order</relationshipName>
    <type>Lookup</type>
</CustomField>