force-app/main/default/objects/Sales_Order__c/fields/Is_Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Is_Submission_Date__c</fullName>
    <formula>IF(ISBLANK(Submission_Date__c) , FALSE, TRUE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Submission Date ?</label>
    <type>Checkbox</type>
</CustomField>