force-app/main/default/objects/Sales_Order__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Sales Order</relationshipLabel>
    <relationshipName>Sales_Order_del</relationshipName>
    <type>Lookup</type>
</CustomField>