force-app/main/default/objects/Sales_Order__c/fields/Order_quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_quantity__c</fullName>
    <label>Order quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>