force-app/main/default/objects/Sales_Order__c/fields/Payment_Received__c.field-meta.xml
<CustomField>
    <fullName>Payment_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Payment Received</label>
    <type>Checkbox</type>
</CustomField>