force-app/main/default/objects/Sales_Order__c/fields/Payment_term__c.field-meta.xml
<CustomField>
    <fullName>Payment_term__c</fullName>
    <formula>TEXT(Account__r.Payment_terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment term</label>
    <type>Text</type>
</CustomField>