force-app/main/default/objects/Sales_Order__c/fields/Plant__c.field-meta.xml
<CustomField>
    <fullName>Plant__c</fullName>
    <inlineHelpText>Enter plant details</inlineHelpText>
    <label>Plant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SAVOURY SPD 1001</fullName>
            </value>
            <value>
                <fullName>COLOURS - 1301</fullName>
            </value>
            <value>
                <fullName>FOOD SERVICE</fullName>
            </value>
            <value>
                <fullName>FLAVOURS - 1201</fullName>
            </value>
            <value>
                <fullName>SAVOURY CPD - 1101</fullName>
            </value>
            <value>
                <fullName>SPL FOOD DIV 1004</fullName>
            </value>
            <value>
                <fullName>SAVOURY PEPSICO</fullName>
            </value>
            <value>
                <fullName>R &amp; D SAVOURY - 1501</fullName>
            </value>
            <value>
                <fullName>BREAKFAST MIX DIV</fullName>
            </value>
            <value>
                <fullName>INDORE DEPOT - 1402</fullName>
            </value>
            <value>
                <fullName>GURGAON DEPOT - 1401</fullName>
            </value>
            <value>
                <fullName>BANGALORE DEPO-1403</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>