force-app/main/default/objects/Sales_Order__c/fields/Proposed_Execution_Date__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Execution_Date__c</fullName>
    <inlineHelpText>Enter approx date the customer requires the order to be fullfilled</inlineHelpText>
    <label>Proposed Execution Date</label>
    <type>DateTime</type>
</CustomField>