force-app/main/default/objects/Sales_Order__c/fields/Return_created__c.field-meta.xml
<CustomField>
    <fullName>Return_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return created?</label>
    <type>Checkbox</type>
</CustomField>