force-app/main/default/objects/Sales_Order__c/fields/Sale_Order_submitted_date_on_Opp_Prod__c.field-meta.xml
<CustomField>
    <fullName>Sale_Order_submitted_date_on_Opp_Prod__c</fullName>
    <label>Sale Order submitted date on Opp Prod</label>
    <type>Date</type>
</CustomField>