force-app/main/default/objects/Sales_Order__c/fields/SAP_Reference_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Reference_Code__c</fullName>
    <externalId>true</externalId>
    <label>SAP Reference Code</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>