force-app/main/default/objects/Sales_Order__c/fields/SAP_Sales_Order_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Sales_Order_Number__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Sales order number from SAP, will be auto captured on SO creation</inlineHelpText>
    <label>SAP Sales Order Number</label>
    <length>125</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>