force-app/main/default/objects/Sales_Order__c/fields/Send_Sales_Ops_Email__c.field-meta.xml
<CustomField>
    <fullName>Send_Sales_Ops_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Sales Ops Email</label>
    <type>Checkbox</type>
</CustomField>