force-app/main/default/objects/Sales_Order__c/fields/Service_Rendering_date__c.field-meta.xml
<CustomField>
    <fullName>Service_Rendering_date__c</fullName>
    <inlineHelpText>Updated from SAP</inlineHelpText>
    <label>Service Rendering date</label>
    <type>Date</type>
</CustomField>