force-app/main/default/objects/Sales_Order__c/fields/Shipping_City__c.field-meta.xml
<CustomField>
    <fullName>Shipping_City__c</fullName>
    <formula>Opportunity__r.Shipping_City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping City</label>
    <type>Text</type>
</CustomField>