force-app/main/default/objects/Sales_Order__c/fields/Shipping_Country__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Country__c</fullName>
    <formula>Opportunity__r.Shipping_Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Country</label>
    <type>Text</type>
</CustomField>