force-app/main/default/objects/Sales_Order__c/fields/Shipping_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Postal_Code__c</fullName>
    <formula>Opportunity__r.Shipping_Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Postal Code</label>
    <type>Text</type>
</CustomField>