force-app/main/default/objects/Sales_Order__c/fields/Shipping_Street__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Street__c</fullName>
    <formula>Opportunity__r.Shipping_Street__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Street</label>
    <type>Text</type>
</CustomField>