force-app/main/default/objects/Sales_Order__c/fields/Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Submitted_Date__c</fullName>
    <inlineHelpText>Sale order submitted to SAP on</inlineHelpText>
    <label>Submitted Date</label>
    <type>Date</type>
</CustomField>