force-app/main/default/objects/Sales_Order__c/fields/Way_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Way_Bill_No__c</fullName>
    <label>Way Bill No.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>